--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -35,6 +35,7 @@
     "layout/page",
     "layout/archive",
     "layout/sidebar",
+    "layout/custom",
 
     "vendor/font-awesome/fontawesome",
     "vendor/font-awesome/solid",
