--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -25,7 +25,7 @@
 
 
 .ai {
-  font-family: 'Pretendard';
+  font-family: 'Academicons';
   font-weight: 400;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
