--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -17,6 +17,7 @@ $indent-var                 : 1.3em;
 $serif                      : Georgia, Times, serif;
 $sans-serif                 : -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
 $monospace                  : Monaco, Consolas, "Lucida Console", monospace;
+$base-font                  : "Pretendard", sans-serif;
 
 /* Sans serif typefaces */
 $sans-serif-narrow          : $sans-serif;
@@ -39,8 +40,10 @@ $type-size-6                : 0.75em;   // ~12px
 $type-size-7                : 0.6875em; // ~11px
 $type-size-8                : 0.625em;  // ~10px
 
-$global-font-family         : $sans-serif;
-$header-font-family         : $sans-serif;
+// $global-font-family         : $sans-serif;
+// $header-font-family         : $sans-serif;
+$global-font-family         : $base-font;
+$header-font-family         : $base-font;
 $caption-font-family        : $serif;
 
 /* ==========================================================================
