--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -16,11 +16,21 @@
         url('../fonts/academicons.svg') format('svg');
 }
 
+
+
 @font-face {
-    font-family: 'Pretendard';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Thin.woff') format('woff');
-    font-weight: 100;
-    font-display: swap;
+	font-family: 'Pretendard';
+	font-weight: 400;
+	font-display: swap;
+  src:url('../fonts/Pretendard-Regular.woff');
+  src:url('../fonts/Pretendard-Regular.woff') format('woff');
+}
+
+@font-face {
+	font-family: 'Pretendard';
+	font-weight: 400;
+	font-display: swap;
+	src: local('Pretendard Regular'), url('../fonts/Pretendard-Regular.woff2') format('woff2'), url('../fonts/Pretendard-Regular.woff') format('woff');
 }
 
 
